--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,4 +2,5 @@
 <h2><%= @article.title %></h2>
 <p><%= @article.content %></p>
 <h3><%= link_to "Update article", edit_article_path(@article) %></h3>
+<h3><%= link_to "Delete article", edit_article_path(@article), method: :delete %></h3>
 <h3><%= link_to "Back to index", articles_path %></h3>
